--- a/Dotnet.Blazor.SnakeGame.UI/Layout/NavMenu.razor
+++ b/Dotnet.Blazor.SnakeGame.UI/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Dotnet.Blazor.SnakeGame.UI</a>
+        <a class="navbar-brand" href="">Snake Game</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -15,18 +15,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="snake-game">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Snake Game
+                <span class="bi bi-snake-game-nav-menu" aria-hidden="true"></span> Snake Game
             </NavLink>
         </div>
     </nav>
