--- a/Dotnet.Blazor.SnakeGame.UI/Layout/NavMenu.razor.css
+++ b/Dotnet.Blazor.SnakeGame.UI/Layout/NavMenu.razor.css
@@ -33,6 +33,10 @@
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-list-nested' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M4.5 11.5A.5.5 0 0 1 5 11h10a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zm-2-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm-2-4A.5.5 0 0 1 1 3h10a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5z'/%3E%3C/svg%3E");
 }
 
+.bi-snake-game-nav-menu {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-snake-game' viewBox='0 0 16 16'%3E%3Cpath d='M4 4c0-1.1.9-2 2-2s2 .9 2 2v.5h2.5c.8 0 1.5.7 1.5 1.5S11.3 7.5 10.5 7.5H10v1c0 1.1-.9 2-2 2H6c-1.1 0-2-.9-2-2V4zM6 3a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM11 6a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z'/%3E%3C/svg%3E");
+}
+
 .nav-item {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
