--- a/Dotnet.Blazor.SnakeGame.UI/Pages/Home.razor
+++ b/Dotnet.Blazor.SnakeGame.UI/Pages/Home.razor
@@ -2,6 +2,20 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello, friend!</h1>
 
-Welcome to your new app.
+Welcome to simple Blazor Snake Game!
+<br/>
+Feel free to explore the game and have fun!
+<hr/>
+
+<button class="btn btn-primary" @onclick="StartANewGame">Let's Play</button>
+
+@code { 
+    [Inject] 
+    NavigationManager Nav { get; set; }
+    private void StartANewGame()
+    {
+        Nav.NavigateTo("/snake-game", forceLoad: true);
+    }
+}
