--- a/Dotnet.Blazor.SnakeGame.UI/_Imports.razor
+++ b/Dotnet.Blazor.SnakeGame.UI/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using Dotnet.Blazor.SnakeGame.UI
 @using Dotnet.Blazor.SnakeGame.UI.Layout
+@using Dotnet.Blazor.SnakeGame.Core
